refactored CSS and appropriate classNames in the components. JobCards now display in a more fluid way and no longer overlap before the breakpoint is triggered. Size of jobCard and jobDetails have been adjusted.

--- a/frontend/tasker/src/components/styles/CreateJob.css
+++ b/frontend/tasker/src/components/styles/CreateJob.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2em 0 2em;
+  margin: 0 0 2em;
   }
   
   .createJob-centered-card {
