--- a/frontend/tasker/src/components/styles/JobDetails.css
+++ b/frontend/tasker/src/components/styles/JobDetails.css
@@ -1,6 +1,6 @@
 .carousel {
     width: 100%;
-    max-height: 80vh; /* Limit the maximum height of the Carousel */
+    max-height: 70vh; /* Limit the maximum height of the Carousel */
     margin: 0 auto;
   }
   
@@ -13,8 +13,8 @@
 }
 
 .carousel img {
-  max-width: 50%;
-  max-height: 50%;
+  max-width: 95%;
+  max-height: 95%;
   margin: 0 auto;
 }
 
@@ -55,20 +55,14 @@
   border-radius: 10px;
   background-color: #A91D2A;
   height: 10px;
-  width: 50px}
-
-.jobDetails-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2em 0 2em;
+  width: 50px
 }
 
 .jobDetails-centered-card {
   text-align: center;
-  max-height: 700px;
+  max-height: 100vh;
   width: 100%;
-  margin: 0 auto;
+  margin: auto;
   background-color: #fff;
   border-radius: 20px;
   padding: 20px;
@@ -83,7 +77,6 @@
   text-align: left;
   padding: 10px;
   margin: 10px 5px;
-  background-color: #e2e2e2;
 }
 
 .card-body {
